# Multicore-Final-Project

./: CMakeLists.txt  README.md  README.txt  compareOutput.sh  compile_and_run.sh  descriptor_10000.txt  descriptor_4000.txt  descriptor_5000.txt  descriptor_9000.txt  keypoints.txt  keypoints_1000.txt  keypoints_10000.txt  keypoints_7000.txt  keypoints_8000.txt  keypoints_9000.txt  output_descriptors.txt  run.sh  test.bash
.github/workflows/: ci.yml
code/cuda/: CMakeLists.txt  run.sh
code/cuda/src/: orb_test_cuda.cpp
code/original/: CMakeLists.txt
code/original/src/: orb.cpp
code/parallel/: CMakeLists.txt  run.sh
code/parallel/src/: orb.cpp  orb_test.cpp
code/src/: feature2d.cpp
code/src/cuda/: CMakeLists.txt
code/src/cuda/src/: orb_test_cuda.cpp
code/src/original/: CMakeLists.txt
code/src/original/src/: orb.cpp  orb_test.cpp
code/src/parallel/: CMakeLists.txt
code/src/parallel/src/: orb.cpp
code/yihan_attempt_on_desp_compute/: CMakeLists.txt  run.sh
code/yihan_attempt_on_desp_compute/src/: orb.cpp  orb_test.cpp
code/ziyue_attempt_on_other_part/: CMakeLists.txt  run.sh
code/ziyue_attempt_on_other_part/src/: orb.cpp  precomp.hpp
desc/: desc_10000_2.txt  desc_cuda_10000_1.txt  desc_cuda_1000_1.txt  desc_cuda_2000_1.txt  desc_cuda_5000_1.txt  desc_original_10000_1.txt  desc_original_2000_1.txt  desc_original_5000_1.txt  desc_parallel_1000_1.txt  desc_parallel_2000_32.txt  descriptor_6000.txt  descriptor_7000.txt  descriptor_8000.txt
descriptor/: descriptor_2000.txt  descriptor_3000.txt
keypoints/: keypoints_3000.txt  keypoints_5000.txt
kpts/: keypoints.txt  keypoints_2000.txt  keypoints_20000.txt  keypoints_4000.txt  keypoints_40000.txt  keypoints_6000.txt
log/: log1000_1.txt  log1000_16.txt  log1000_2.txt  log1000_32.txt  log1000_4.txt  log1000_8.txt  log2000_1.txt  log2000_2.txt  log_10000_2.txt  log_2000_16.txt  log_5000_16.txt  log_5000_2.txt  log_5000_32.txt  log_5000_4.txt  log_5000_8.txt  log_cuda_10000_1.txt  log_cuda_1000_1.txt  log_cuda_2000_1.txt  log_cuda_5000_1.txt  log_original_10000_1.txt  log_original_1000_1.txt  log_original_2000_1.txt  log_original_5000_1.txt  log_parallel_10000_1.txt  log_parallel_10000_16.txt  log_parallel_10000_2.txt  log_parallel_10000_32.txt  log_parallel_10000_4.txt  log_parallel_10000_8.txt  log_parallel_1000_1.txt  log_parallel_1000_16.txt  log_parallel_1000_2.txt  log_parallel_1000_32.txt  log_parallel_1000_4.txt  log_parallel_1000_8.txt  log_parallel_2000_1.txt  log_parallel_2000_16.txt  log_parallel_2000_2.txt  log_parallel_2000_32.txt  log_parallel_2000_4.txt  (+7 more)
opencv_compile/: opencv_compile.txt
src/: main.cpp  orb_test.cpp  orb_test_cuda.cpp
src/cuda/: CMakeLists.txt
src/cuda/src/: orb_test_cuda.cpp
src/original/: CMakeLists.txt  run.sh
src/original/src/: feature2d.cpp  keypoint.cpp
src/parallel/: CMakeLists.txt  keypoints.txt  run.sh
src/parallel/src/: orb.cpp
src/yihan/: run.sh
tests/: output_gpu_keypoints_1000.txt  output_gpu_keypoints_2000.txt  output_gpu_keypoints_3000.txt  output_gpu_keypoints_4000.txt  output_gpu_keypoints_5000.txt  output_parallel_keypoints_1000.txt  output_parallel_keypoints_2000.txt  output_parallel_keypoints_3000.txt  output_parallel_keypoints_4000.txt  output_parallel_keypoints_5000.txt  output_serial_keypoints_1000.txt  output_serial_keypoints_2000.txt  output_serial_keypoints_3000.txt  output_serial_keypoints_4000.txt  output_serial_keypoints_5000.txt
